--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -6,7 +6,7 @@
       type="text" 
       id="search-input" 
       placeholder="搜索内容..." 
-      class="w-full py-2 px-4 pr-10 rounded-lg border border-gray-300 dark:border-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 bg-white dark:bg-gray-800 dark:text-gray-100"
+      class="w-full py-2 px-4 pr-10 rounded-lg border border-gray-300 dark:border-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 bg-white text-gray-900 dark:bg-gray-800 dark:text-gray-100"
     />
     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 absolute right-3 text-gray-400 dark:text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -194,4 +194,4 @@
   .search-results {
     max-height: 80vh;
   }
-</style> 
+</style>
